Fix ESLint errors for Vercel deployment